--- a/ClipWatcher/MainForm.resx
+++ b/ClipWatcher/MainForm.resx
@@ -123,7 +123,117 @@
   <metadata name="ClipsFolderBrowserDialog.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>175, 17</value>
   </metadata>
-  <metadata name="ErrorProvider.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+  <metadata name="DiscordWebhookTextBoxErrorProvider.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>364, 17</value>
   </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAAAAAAAEAIABuGAAAFgAAAIlQTkcNChoKAAAADUlIRFIAAAEAAAABAAgGAAAAXHKoZgAAGDVJ
+        REFUeJztnQe4HMWRx5tsYY5kkzECDGdswMZwgHUnm4xtjuBzIgsZOB8mySaDyUGIIDAIkIAjpxMm52Ak
+        kaRDIhmOHEQGiaQDhESS3DW7Pdqet7mrZ97b/f2+7/9J773d3urq6ZrZme4qYwAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAADAMsRqlNUYq8etXrZ632p2i5pu9ZDVRVYHWc2bZycAoD7zWB1o
+        daHV06Y0aR8wrU/0ZjWp/O9Eq0usftCivbtX2Kmlp8vtxmJnq8esZirbHdP2Va1GWo1TtHWW1VNWu0Ww
+        F1pADpjhVi+a0kRsaSD7WS1lZY+Q2WtbbWC1YYXWt/q21SLNtfepKV1ZjLY62mrhBnbHCkyzTZyJtHNk
+        m2PYLpP/vcj2EgRyxk36O02dgVmkPKH3sho111yzx1g9bvWy1ftWs+eeuyVNt+95yOoiq/1smxtbLVb/
+        wJAzxKVWa1Xpg/aZP6unlXxdyWORbY5h+8gc7H1K0V6owQJWh5o6k/6frQZbXWgn6NNtTPB2NdF+1p/t
+        536/9gEyw/QMAsnfBlhp2vI1/3M1sRdDyWXvbHtZM3tmBP/OF8f2m12b4xRtnmXb+s4cW2cp2gsZ7EnW
+        HGf1qKkyuQZaDbeD8WKOE76e5MpitNVve9p6aaZfye9/0HcCwGjX7j7KNjvNo297+pWlv7LNt9kxrrD1
+        NiV7IYPcvX/WZCbTsuVJ/0EvmfS1NMk/SCZl+pb8ftW+EQDmNqWnH0m7T0Ty+1z6tp/o2jtR2ebNfVuH
+        K9kLZbY3Ve7ef8/qUjuQn/fyie90sx8Abs70Mfn9cn0jABzg2lw/0tlfZHRtX8qUHvcmgeVdxWPmGX9c
+        X7NaTsFesGxmdbvJTHy5C39NH5n0ldrB78fJmb4mv1+sbwSAC1ybF0Qah1n+pNL4Tn2Sa29rZR/v7vv4
+        OgVbu54lrYaZzMSXx3Ny9/6LPjj5Z1ibF5jTl8lWS2f6nPxtgd4fANKbfwtafRJpLL70A8CXCnbf5Nq7
+        SdFmucczv+/jgQq2djWbWL1kKpwqB/HhEQ+2PDTaP6BHV+l3+vdeHgDSm397RLz8/9z31+eBNm/q2vqG
+        1VeKx9Fxvp3HBdrZ9exoMmf9ba1e6cMT3+kXfr+OrtL3T9zfNQNdhACQ3ouJdfNP9Jk/sT4LtPk219ah
+        ikFLrkSX8P27faCdXc3epsKZC1nd2AETX/Sx7ce8c/omi0SqrQic6vo+tfcGgCGurbUjnv1FM/wAMCPA
+        ZuuCOQuWJiv69hLfxuvDXNu9LGN1r6k4UFezerlDJr/oIv9AuaiGH15xr9G84lEOAKNcW6Mij89032fT
+        A2w+zLWzoXLQyiz0OiTMtd1Jf1Nx4It+ZfVpB01+UeYZ8UE1fJEuBdZctagYANY05a8pMW/+OX3iB4BP
+        Auy+zLVzmaLN43z7HrGaP8y93YdM/rdMxQF6dodNfNG7PRf/1Noy/LB73cO9MwBc5NrZLfLlv+gj328f
+        tWnzelZfSRuyXHmGol+38f06MtC3Xce3TcXkl+/Ht3Tg5Bed7R/IZ9fxyf3udff3zgAw1rXzvzmM1TTf
+        b9PatPl/XBt7Kgatl3zbZGfhqoG+7SrkGX96w0sm/10dOvlFA/0JuHcdv6Sbmu7sfQFgT9fGGjmc/UUf
+        +JPsgzbtTu8t/V3Rp/v4Pr0lwK9dSfqMf/4On/yv+QfxvQ38cr177fW9LwCMcG2MyGm83vd9934bNqdP
+        lTSfWMhXk36+TzcO8GvXIcskE8eJE8cUOPnlJtMEq3Ot9rW2/NiUHj2aGpINR+tYbWFKC2CG2veNtap3
+        w/Jk/yDOLv3NcoV77RW9KwCsZvWhKQfsaTmNWebeybtt2H22e7/mvaVTfbtObdOnXcl2puJgLOIZvyT/
+        OMZqQJ2J3o7kMv8IqwmZPv3Qf93gBv453732/N4VAM5z7x+U0+W/aIo/0aa0aHOa9WcBxaAlKwiX8/1J
+        5p8mSZdiio7NcfLLnV95Zr1O44n8YIO/O91U7+/LWx1gdXHr+8PPcK8/o3cFgLvc+zVvTjbSO77/3mnR
+        5jTrz06KQetq36Y72vRnV5I6bpucziKylPQsqyVrT9ZrrSZYnWv1xxb7Y48rM9SU7oxL3r+Pa3yG08FN
+        tBllr3pgAPhP995Vcjz7i97yJ9tbLdodJetP5srxmDb82ZWMM2WnrW7iL/KRbaRXWn2r+kSUdewycNsq
+        93ENU8o8LAElfZ5flvw8XxNtpNlqjlScbIEB4DT33tNy/sr2hh8A3mjB5ihZfx737ZFFW4u04c+uYy9T
+        dpok5NRch11NL9j2/6X6xB9nSuvY80Amu5zxLy7/28zkdyRnrgN6RwCQtRrJ49p5Fb9HN6vX/Qn3egt2
+        R7mS2s7341Ut+rIrkZz4cnmcOO2syAeQnPWr3MV/wpSCUF8hsVtz0UpAAEjvom+f8+W/6FU/ALzapM2y
+        xiR5zKyZ9UeCUUV+QslNsG6LvuxKpDBG4rQ1rWZFDACn+weL0xFWXy+u+22R2D64dwSAW9z7inhcO9kf
+        08lN2pwmkdHM+nOQ78O7WvRj15I6bWLEA+iw6mf9vjbxHUkfflt8ABjk3hPyPTrk+fuLfgB4sUm7b3Tv
+        0XrMPL3nleXPWvBj15KuatN8DJPVwT0n/91FdlqBpB9bFh8A0jPpsDYnkizl3TWgHy/4AeCFJmyOkvWn
+        hb0cUEayoiQOW0jxe1hWF/e87P99kZ1WIunLJsUGgBWs3jTlm3/tjp+ssBwS0I/n/fF9vgm706w/hyj5
+        T762ruT7r95eDigjedEShx0XafLf2nPyN/OcvS+Q9EezOlAbAeAv7vW/DrBDyqSFPM581h/jZxvYHCXr
+        TyaNe6O9HGDZwpQdJgdejEIdskR0Yf+gbvY5e18g6ZNmdaA2AsAN7vXt7kp0O/mGB4x/Jtf+Mw1sTrP+
+        bKDou0183zXaywGWv5myw/aN9N1/C39Q5PHQskV2WJmkX5rVgVoMADu419rvAW0/uXHfm0P2NDzlB4BG
+        xTbVs/5kApA8hcimcYcMPzJlh8kz2DcjnP2v7nnpv3WRHY5A0i/N6kAtBoDj3WuPDxi/n5TbuDqgjSf9
+        sX6yjs1rm1LWYNWsP7/z/Uaxjya42pQdtm2ks/9S/qB04lrspG+LFhMAJDnrK+61b7U5kSqX8N4eMBkz
+        S28fr2P35e51f1Dy29SeJxqKfTSBROnEYU9GOPuf0h1rsdP7JwUEgFPc60I2bJ1WMU735RMAxrnXPaJ0
+        3B3Nzb+WWd2UEjcmqZK1J78k71jcP5B3LbS38Uj7WEAASFf+heRnXK/i80KSmz7qT8JHa9ic7jVZU8ln
+        M+3nLub7bJvQQe0G0mKRmpVXnIb6B8PthfY0LurVgZoMAP/uXrO0aX8RTWYDT1B684f9th6uYfdZ7jVa
+        e00u9D/3QoUx7QrGm7LTxitf/sud6KX9g3inQnsaF/XqQE0GgHvca44K+NzjMwEgpMDJJL+tSVVsXsWU
+        UoWpZv35ju+vA5XGtaNZ1JSe0yaX6dqbfu7yD4SbCu1pfF4xCpOnxQDwTVNaaht080/0Xf+zgoLYQ/64
+        P1TF7nPc33dUuur8m/+ZE63m0RrYTuZYU3baLhEu/zP7sM8otKfxUa8O1EQAGOr+vkXA+D1RZUdmyNeY
+        CX57E6rYnaZmG6vkqy19+0foDWtn81dTdtpflc/+meowkhaqf5EdzQH16kBNBACVdOSHZia/CTwZPOiP
+        /YMZm3dyf1tZ6aST2XwkOQhXUh3ZDia5+y/6SDkA3OgPyo2F9jIf1KsDNQgAm7m/heygk699y8z5jFny
+        79yBE/MBf+wfyNidXrUMVfLTnr6fOv2rpiqJ0zSXrzplKrAMK7abuSCZZpP+3qF0YJv6AeB297fDAsbv
+        Hn+ypjcUQ+y+t/azePlePtH9bYqCnz60bSzo+2lD/aHtTOyJI9mqmVT11Q4AFTeVJM3TkoX2NB/UqwPN
+        XzsA9DOlBTbBNx0HV7n8/3rg8ZCpvjuuwu4D3e83VTrmTvI/66RIY9uRnGDKjjta+fI/sxxzaqG9zA/1
+        6kDz1Q4Af3a/3yhgIs3wz55TXJuLBE7OKlcVjgvd7y9U8NEXc/Uo9rFLvOHtPNJSX9cpB4Ax/gEwptBe
+        5od6daB5ageAdA395QGfdbk/Tmmb3wwMAJnHvy4PX3rFKclKPlbw0VX+59wadXQ7EMnVljjvReUAcI4/
+        MOcU2sv8UK8ONHf1ALCO1efyO9lBNzPgszb320+vKpYODAB3+OPvqvCkV5xaXzm/79t/ZPQR7jASx/WL
+        8P1/iD8w+xTbzdxQz2lvqgeA9KtGSAryTP0+uZ/Qz/0cuqX5Fr9tV4Jb9Yoz86hRNrMtFHd4O4/EeVob
+        MSr10zkDc1/BfcwT9epApnoAGOt+92jARBrmTyD3lCb5+VuB9mfScUnBlJVN+R6D3GD8XCEA/Mb3zX/H
+        HtxOJHHewAgBYL3qB243oFYd6Ct/En1Vbn9P97s1Aj9jBX+MBpXbT35ePrDtG3zbJU1ZuvFnNwXfyMal
+        uea0//9W38tldDuMxIE/jxAA1ujeAJD0WSu5henpxxHu5xEBZ9Fx1S/RU/uXCbT/Gr/9a0zF+oJ7FM7+
+        +/l+odhHmyQO1Cxk4bRylweAwQo+nelPopmmlNdusvwsd9E/DJhIO/vjMzJr/7KB9mfuzkstvuSm5RIm
+        fMMZxT70SBy4e4QAsHSXBwCNoPqJP4kk18DJ7ueQlN/SbsUCo/esVs3aH3oFkKn7cLH7//4KfjnTb/vM
+        XEa1Q0m+r/4pQgBYtMsDwFYKPp3mH+jTTHm8RDcHnEUbPKJNfh/6GPBc/zPSFZIhNy1FVYp9/CH+kHYm
+        UerZO3X7FYBGdaD3/En0nvu/LNIJKZ21jj822Ue0ye+XCrQ/c5ZOtJKCTzI3F7tlgVkUotRhd1qpywPA
+        jxQO9rf9g/1t9//9AtrOJOus9og2DTIhtp9SJQBoVJrawG/zxNiD2clEvQJYt8sDgEZ1oEyOvjvd/58J
+        mEh7+ONyVS37Q1ObZ9OLiV4PDACZ4CWrWJeIPJYdj9oz66x+OWegui01U9Jvje3Vk6tMorUC2p3mb/z5
+        0mrdWvaH7gY8PGP3egr+GNQ4eEGLJM7UemZdqT/6g9VNyRlVHqOJnqsSAELq9Q332xtez34TaH/mOf3s
+        UwPP/pmvQ7WCF7RI4tCdIwSALk7PnPR5cQWf/l+VANBuAg25e55Zm7F7PftDMwJlMvTMficwAGSuKLj5
+        p4TaHeusmiwM0YkkfdaoDvRIJgBsFtDmrT3vJ9S13wTaP7iinX8NbKtKsY8t4w1fd6H2eCarL/3vm3+3
+        WrDYruaGygQSZTLrJotr2m3rZ/4EOrWO/Z+5130W8HnbVnxe6Nbo830/nB9v6LqPL6ySpBNfRHgU+Gv/
+        oDu82K7mhlp1oMq8elI8o90EGi/6E6hRSXYV+7dSvPzPFPvYL97QdR9pQYkXIgSAK/wD74pCe5ofatWB
+        7q7wX0jF5n39CXRzA/unudeGVOvZpNzGTwKvhO5sXF8AAohWE0AkVxWZoqDbFdrbfHjFlPsbWh2oMqlG
+        u0t/P7XvW9gfg40a2P+ue+27AfYPKLcRWvMv89XlL5HGrGtJqwKFrC6rpyP9Aby70N7mg1p1oGvLAeAb
+        AWMzwj+DNlMt5033+jcD7HepukLSfj/j2y52rRBjwLqZtC7gv0UKAPK9dRE/CPy+0B7H5xFT7mtovfsr
+        yxNg74CxyTz627MJ+19zr38twH5ZCLVx4DH1X77t18UZLlB7bFVLp/d8nr11oT2Oi1p1ILeW4qE228lk
+        5h3bpP0vufe8FGC/LIQaFfD+9/0ty6KB+kMFgsoW03qSRSgD/MEUbVpkpyOSrtm/M9CfI+37VwwIzFv5
+        /m62MOuz7j3PBtgv934+CHj/CX7wOkF/mMCRJpnQKtNcTVN67uMWdWImF7XMt6fZ97e7g+41fwK1Upj1
+        Sfe+JwPsD00zt6R/nOyoP0zgSNNMSZqlGZGuAkSyuaV/zyDwiyI7HwGVgh0iKZzZ7o24/X0f11v5l+VR
+        976Q5B0hhVEu84NXNxSVLZxLTNnhl0QMACLZErpKzyAgX0MaPZ7qK6hVB3oi4P2ZpbM/bcH+Se59kyIf
+        C7X0Q9/2w5THB6pwiCk7XO7ehiZtbCR5vrx2zyDgHhP+PEL/pCSVfI9ML89NqYyULImttyquHc50n3Fm
+        QRPoPP8Mel6L9o937x1fgP33+7Y/ZvU1vaGBWsxvKh5f3ZDTwGd3jFVIbJGbVnu02R95vClrHGShk6zM
+        e77G54gaLY1tlWGu7WEFBYDv+v37U4v23+fee18B9v/St73V4AUBpCnC1o14MzArWae+a+3JKbqnzt9q
+        6Zlaf/snq99Z7eX/vt7mmFYZ5NqNkWmpkTL5/se3Yb9q/v5WlCn28aHVakpjAk0g6ZXSYqFX5Tz4b9jP
+        k8xEy7c+2RtK7jlIkKm8K5/ZHqtdVVYKbUTJtNRIv/L7PrK+mVW5w73/jpyPgUwSGYp9FIBUV00GILQ2
+        XIhkBZ1sIR1sbVjfqn+TE10eM0qZsx2sDjKl/Q21NuREzleQtBtSuLMdveOfQbP5/pvlFmf/LTkGgI/m
+        othHb0Cqq6bPgY8t6DtsHprqB4Cpyn5M2h2ccwA41J9AY9u0Pc3hf32O459ZLXq6whhAm8iOvWQgJE9A
+        EXeC89I8/oTRJGkzZAtvq6qSNWerNm2PukO0mqTGwXK+7Z2+X6TXkz4ukxVZ73VoEFgxcgDQqA7UrKqU
+        4mqXK107V+Y07tf6tnfDjtE+wUemPCg/LvB+QEwNiBwAYuRarKW1/L4cHGB7bovCnAb6th8f6nzQYXVT
+        MTAxKggXrd/EewqQtDsgJ5+N98+gD1vNF2D7Ba6tC3IIAJliH89ZLR7metDkP0xFEDi4w4LAEP/Ms4ui
+        35I2NaoDNaPt/X5cEGj7KNdWyHbeZrWjbzvFPnohkj8+HaQiFrfE0kn+2eckRZ8lbWpUB2okefRXcTNT
+        vratHmj7Wc7+0HRejTTFt51iH70YLwhsbeLuGsxLl/sB4HJFfyVtLp9DADiqvaQf9TjdtXd65DHOPLYc
+        p2A7RMQLArKZJzTpZdEa408ezWozSZsa1YHqSZKuZvbNt/vor5I0P8TJEce3ymPLTs4S1TF4QaCflSSd
+        jL17MJae63kDSoukzZhp1kSR0q4PdW0OjTiuo3zbRynZDjmwk/Ej9+yNTFjJ6qI03T8Ipyv6KG03pv2Z
+        x5hahVeOcW0eEzFFXCY71BAl2yEnNjOl75vpIEoxSdllF1oDPm9lcuZroVYdqJYyexk0S69t69o9IlIA
+        u823/QElu6EAJM20dzUgl72y1fblPhAI7ve/h96v6Be16kC1tIvvd+2qS9dKu4dECgCb+7bXKlMOfQRJ
+        11yZaSeVVHW5tZcFAkmzdVT1tGSaySdede2+GqH/mZTZn1uto2i7cbbvHyEAZIp9SA2C5ZRth4KQ7Zuy
+        h7tHIJCrAiltfYod/Ik5BwSpbyf58eVgrjLpnbSTT6QJSWLcG8khZXbS9pAIAWB33+8U++hANjGlpbXp
+        WbCapHTUIKsT7cE82upBq7fbnCyyoETKcI21kkScUuZMLjOXq/P5VrNM6bJfzvzamWeqXhFFUoyU2Wl5
+        s8ii2EcHI3n2JNWWBIPbTQsHhnwvX7EcJGSjyIYV2sBKssb2t1q4tYNNJPnxn7AabbV+xL4PbNGudhUr
+        Zbb3uDeSdo9kO/RSdrU6xWqiKR0AaUWiSJpQ/lfKXctXE0ky2j96L+fg7o3UzE8YILnsj10sQyZojCuB
+        pw2TH8rsbErJSOWM/KDV26a9g2qKKR1YY00pL/9+eXYCAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAoBb/AJYg7aLRZz+wAAAAAElFTkSuQmCC
+</value>
+  </data>
 </root>
